transacciones ordenadas en balance